Creato con Colab

--- a/extras/exercises/07_pytorch_experiment_tracking_exercise_template.ipynb
+++ b/extras/exercises/07_pytorch_experiment_tracking_exercise_template.ipynb
@@ -209,10 +209,10 @@
       ],
       "metadata": {
         "id": "i_52puIeoab3",
-        "outputId": "302be82e-661f-4dea-b64c-4d134dceff49",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "302be82e-661f-4dea-b64c-4d134dceff49"
       },
       "execution_count": 5,
       "outputs": [
@@ -699,25 +699,210 @@
     {
       "cell_type": "code",
       "source": [
+        "# Models\n",
+        "weights_1 = torchvision.models.EfficientNet_B2_Weights.DEFAULT\n",
+        "model_1 =  torchvision.models.efficientnet_b2(weights = weights_1)\n",
+        "\n",
+        "weights_2 = torchvision.models.EfficientNet_B3_Weights.DEFAULT\n",
+        "model_2 =  torchvision.models.efficientnet_b3(weights = weights_2)\n"
+      ],
+      "metadata": {
+        "id": "iPVmRkAtbpcH",
+        "outputId": "00243496-da65-4f10-d907-06ef75f49ba2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading: \"https://download.pytorch.org/models/efficientnet_b3_rwightman-b3899882.pth\" to /root/.cache/torch/hub/checkpoints/efficientnet_b3_rwightman-b3899882.pth\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 47.2M/47.2M [00:00<00:00, 160MB/s]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let's figure out how many out features do we need\n",
+        "import torchinfo\n",
+        "\n",
+        "summary(model = model_2,\n",
+        "        input_size = (32,3,224,224),\n",
+        "        col_names = [\"input_size\",\"output_size\", \"num_params\",\"trainable\"],\n",
+        "        col_width = 20,\n",
+        "        row_settings = [\"var_names\"])"
+      ],
+      "metadata": {
+        "id": "EBl09kmKbZAO",
+        "outputId": "b5c33f2f-c224-4061-beb9-18f39a4b2fa3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "============================================================================================================================================\n",
+              "Layer (type (var_name))                                      Input Shape          Output Shape         Param #              Trainable\n",
+              "============================================================================================================================================\n",
+              "EfficientNet (EfficientNet)                                  [32, 3, 224, 224]    [32, 1000]           --                   True\n",
+              "├─Sequential (features)                                      [32, 3, 224, 224]    [32, 1536, 7, 7]     --                   True\n",
+              "│    └─Conv2dNormActivation (0)                              [32, 3, 224, 224]    [32, 40, 112, 112]   --                   True\n",
+              "│    │    └─Conv2d (0)                                       [32, 3, 224, 224]    [32, 40, 112, 112]   1,080                True\n",
+              "│    │    └─BatchNorm2d (1)                                  [32, 40, 112, 112]   [32, 40, 112, 112]   80                   True\n",
+              "│    │    └─SiLU (2)                                         [32, 40, 112, 112]   [32, 40, 112, 112]   --                   --\n",
+              "│    └─Sequential (1)                                        [32, 40, 112, 112]   [32, 24, 112, 112]   --                   True\n",
+              "│    │    └─MBConv (0)                                       [32, 40, 112, 112]   [32, 24, 112, 112]   2,298                True\n",
+              "│    │    └─MBConv (1)                                       [32, 24, 112, 112]   [32, 24, 112, 112]   1,206                True\n",
+              "│    └─Sequential (2)                                        [32, 24, 112, 112]   [32, 32, 56, 56]     --                   True\n",
+              "│    │    └─MBConv (0)                                       [32, 24, 112, 112]   [32, 32, 56, 56]     11,878               True\n",
+              "│    │    └─MBConv (1)                                       [32, 32, 56, 56]     [32, 32, 56, 56]     18,120               True\n",
+              "│    │    └─MBConv (2)                                       [32, 32, 56, 56]     [32, 32, 56, 56]     18,120               True\n",
+              "│    └─Sequential (3)                                        [32, 32, 56, 56]     [32, 48, 28, 28]     --                   True\n",
+              "│    │    └─MBConv (0)                                       [32, 32, 56, 56]     [32, 48, 28, 28]     24,296               True\n",
+              "│    │    └─MBConv (1)                                       [32, 48, 28, 28]     [32, 48, 28, 28]     43,308               True\n",
+              "│    │    └─MBConv (2)                                       [32, 48, 28, 28]     [32, 48, 28, 28]     43,308               True\n",
+              "│    └─Sequential (4)                                        [32, 48, 28, 28]     [32, 96, 14, 14]     --                   True\n",
+              "│    │    └─MBConv (0)                                       [32, 48, 28, 28]     [32, 96, 14, 14]     52,620               True\n",
+              "│    │    └─MBConv (1)                                       [32, 96, 14, 14]     [32, 96, 14, 14]     146,520              True\n",
+              "│    │    └─MBConv (2)                                       [32, 96, 14, 14]     [32, 96, 14, 14]     146,520              True\n",
+              "│    │    └─MBConv (3)                                       [32, 96, 14, 14]     [32, 96, 14, 14]     146,520              True\n",
+              "│    │    └─MBConv (4)                                       [32, 96, 14, 14]     [32, 96, 14, 14]     146,520              True\n",
+              "│    └─Sequential (5)                                        [32, 96, 14, 14]     [32, 136, 14, 14]    --                   True\n",
+              "│    │    └─MBConv (0)                                       [32, 96, 14, 14]     [32, 136, 14, 14]    178,856              True\n",
+              "│    │    └─MBConv (1)                                       [32, 136, 14, 14]    [32, 136, 14, 14]    302,226              True\n",
+              "│    │    └─MBConv (2)                                       [32, 136, 14, 14]    [32, 136, 14, 14]    302,226              True\n",
+              "│    │    └─MBConv (3)                                       [32, 136, 14, 14]    [32, 136, 14, 14]    302,226              True\n",
+              "│    │    └─MBConv (4)                                       [32, 136, 14, 14]    [32, 136, 14, 14]    302,226              True\n",
+              "│    └─Sequential (6)                                        [32, 136, 14, 14]    [32, 232, 7, 7]      --                   True\n",
+              "│    │    └─MBConv (0)                                       [32, 136, 14, 14]    [32, 232, 7, 7]      380,754              True\n",
+              "│    │    └─MBConv (1)                                       [32, 232, 7, 7]      [32, 232, 7, 7]      849,642              True\n",
+              "│    │    └─MBConv (2)                                       [32, 232, 7, 7]      [32, 232, 7, 7]      849,642              True\n",
+              "│    │    └─MBConv (3)                                       [32, 232, 7, 7]      [32, 232, 7, 7]      849,642              True\n",
+              "│    │    └─MBConv (4)                                       [32, 232, 7, 7]      [32, 232, 7, 7]      849,642              True\n",
+              "│    │    └─MBConv (5)                                       [32, 232, 7, 7]      [32, 232, 7, 7]      849,642              True\n",
+              "│    └─Sequential (7)                                        [32, 232, 7, 7]      [32, 384, 7, 7]      --                   True\n",
+              "│    │    └─MBConv (0)                                       [32, 232, 7, 7]      [32, 384, 7, 7]      1,039,258            True\n",
+              "│    │    └─MBConv (1)                                       [32, 384, 7, 7]      [32, 384, 7, 7]      2,244,960            True\n",
+              "│    └─Conv2dNormActivation (8)                              [32, 384, 7, 7]      [32, 1536, 7, 7]     --                   True\n",
+              "│    │    └─Conv2d (0)                                       [32, 384, 7, 7]      [32, 1536, 7, 7]     589,824              True\n",
+              "│    │    └─BatchNorm2d (1)                                  [32, 1536, 7, 7]     [32, 1536, 7, 7]     3,072                True\n",
+              "│    │    └─SiLU (2)                                         [32, 1536, 7, 7]     [32, 1536, 7, 7]     --                   --\n",
+              "├─AdaptiveAvgPool2d (avgpool)                                [32, 1536, 7, 7]     [32, 1536, 1, 1]     --                   --\n",
+              "├─Sequential (classifier)                                    [32, 1536]           [32, 1000]           --                   True\n",
+              "│    └─Dropout (0)                                           [32, 1536]           [32, 1536]           --                   --\n",
+              "│    └─Linear (1)                                            [32, 1536]           [32, 1000]           1,537,000            True\n",
+              "============================================================================================================================================\n",
+              "Total params: 12,233,232\n",
+              "Trainable params: 12,233,232\n",
+              "Non-trainable params: 0\n",
+              "Total mult-adds (Units.GIGABYTES): 30.81\n",
+              "============================================================================================================================================\n",
+              "Input size (MB): 19.27\n",
+              "Forward/backward pass size (MB): 6654.32\n",
+              "Params size (MB): 48.93\n",
+              "Estimated Total Size (MB): 6722.52\n",
+              "============================================================================================================================================"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Create some feature extractor model\n",
         "import torchvision\n",
         "import torch\n",
         "\n",
         "from torch import nn\n",
+        "OUT_FEATURES = len(class_names)\n",
         "\n",
         "# Create a helper function to instantiate effnet pretrained models and change the classifier to suit our problem\n",
-        "def create_effnet():\n",
+        "def create_effnetb2():\n",
         "  # Choose the model and get the pretrained weights\n",
         "  weights = torchvision.models.EfficientNet_B2_Weights.DEFAULT\n",
         "  model =  torchvision.models.efficientnet_b2(weights = weights)\n",
         "\n",
-        "  #"
+        "  # Freeze the base parameters for the train\n",
+        "  for param in model.features.parameters():\n",
+        "    param.required_grad = False\n",
+        "\n",
+        "  # Set the seeds\n",
+        "  set_seeds()\n",
+        "\n",
+        "  # Change the classifier head\n",
+        "  model.classifier = nn.Sequential(\n",
+        "      nn.Dropout(p=0.2),\n",
+        "        nn.Linear(in_features=1408, out_features=OUT_FEATURES)\n",
+        "    ).to(device)\n",
+        "\n",
+        "  # Name the model\n",
+        "  model.name = \"effnetb2\"\n",
+        "  print(f\"Created {model.name} new model\")\n",
+        "  return model\n",
+        "\n",
+        "def create_effnetb3():\n",
+        "  # Choose the model\n",
+        "  weights = torchvision.models.EfficientNet_B3_Weights.DEFAULT\n",
+        "  model =  torchvision.models.efficientnet_b3(weights = weights)\n",
+        "\n",
+        "  # Freeze the base layers\n",
+        "  for param in model.features.parameters():\n",
+        "    param.requeres_grad = False\n",
+        "\n",
+        "  # Set the seed\n",
+        "  set_seeds()\n",
+        "\n",
+        "  # Change the model's head classifier\n",
+        "  model.classifier = nn.Sequential(\n",
+        "      nn.Dropout(p=0.2),\n",
+        "        nn.Linear(in_features=1536, out_features=OUT_FEATURES)\n",
+        "    ).to(device)\n",
+        "\n",
+        "  # Change the model's name\n",
+        "  model.name = \"effnetb3\"\n",
+        "  print(f\"Created {model.name} new model\")\n",
+        "  return model"
       ],
       "metadata": {
-        "id": "F-35y0uxJ8tg"
+        "id": "F-35y0uxJ8tg",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "outputId": "65cee222-cddb-47e5-cd30-8f92b6f70311"
       },
-      "execution_count": 16,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'class_names' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-667518592.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mOUT_FEATURES\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Create a helper function to instantiate effnet pretrained models and change the classifier to suit our problem\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'class_names' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
