Fix syntax error in matplotlib scatter plot code

--- a/02_pytorch_classification.ipynb
+++ b/02_pytorch_classification.ipynb
@@ -418,7 +418,7 @@
     "plt.scatter(x=X[:, 0], \n",
     "            y=X[:, 1], \n",
     "            c=y, \n",
-    "            cmap=plt.cm.RdYlBu);"
+    "            cmap=plt.cm.RdYlBu)"
    ]
   },
   {
