#1300 Update torchvision.io.read_image to torchvision.io.decode due to deprecation

--- a/04_pytorch_custom_datasets.ipynb
+++ b/04_pytorch_custom_datasets.ipynb
@@ -3420,7 +3420,7 @@
     "\n",
     "PyTorch's `torchvision` has several input and output (\"IO\" or \"io\" for short) methods for reading and writing images and video in [`torchvision.io`](https://pytorch.org/vision/stable/io.html).\n",
     "\n",
-    "Since we want to load in an image, we'll use [`torchvision.io.read_image()`](https://pytorch.org/vision/stable/generated/torchvision.io.read_image.html#torchvision.io.read_image).\n",
+    "Since we want to load in an image, we'll use [`torchvision.io.decode_image()`](https://docs.pytorch.org/vision/stable/generated/torchvision.io.decode_image.html#torchvision.io.decode_image).\n",
     "\n",
     "This method will read a JPEG or PNG image and turn it into a 3 dimensional RGB or grayscale `torch.Tensor` with values of datatype `uint8` in range `[0, 255]`.\n",
     "\n",
@@ -3429,7 +3429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3471,7 +3471,7 @@
     "import torchvision\n",
     "\n",
     "# Read in custom image\n",
-    "custom_image_uint8 = torchvision.io.read_image(str(custom_image_path))\n",
+    "custom_image_uint8 = torchvision.io.decode_image(str(custom_image_path))\n",
     "\n",
     "# Print out image data\n",
     "print(f\"Custom image tensor:\\n{custom_image_uint8}\\n\")\n",
@@ -3538,7 +3538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3578,7 +3578,7 @@
    ],
    "source": [
     "# Load in custom image and convert the tensor values to float32\n",
-    "custom_image = torchvision.io.read_image(str(custom_image_path)).type(torch.float32)\n",
+    "custom_image = torchvision.io.decode_image(str(custom_image_path)).type(torch.float32)\n",
     "\n",
     "# Divide the image pixel values by 255 to get them between [0, 1]\n",
     "custom_image = custom_image / 255. \n",
@@ -3996,7 +3996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4008,7 +4008,7 @@
     "    \"\"\"Makes a prediction on a target image and plots the image with its prediction.\"\"\"\n",
     "    \n",
     "    # 1. Load in image and convert the tensor values to float32\n",
-    "    target_image = torchvision.io.read_image(str(image_path)).type(torch.float32)\n",
+    "    target_image = torchvision.io.decode_image(str(image_path)).type(torch.float32)\n",
     "    \n",
     "    # 2. Divide the image pixel values by 255 to get them between [0, 1]\n",
     "    target_image = target_image / 255. \n",
