Update explanation of tensor and NumPy array behavior

--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -3004,7 +3004,8 @@
     "id": "Dt8yEV1jMfi2"
    },
    "source": [
-    "And the same rule applies as above, if you change the original `tensor`, the new `numpy_tensor` stays the same."
+    "If you reassign a tensor (non–in-place operation), the NumPy array is unchanged.
+If you modify the tensor in-place, the NumPy array will reflect the change because they share memory."
    ]
   },
   {
